prevent long usernames with spaces from wrapping

--- a/static/less/chat.less
+++ b/static/less/chat.less
@@ -222,6 +222,7 @@
           text-overflow: ellipsis;
           overflow-x: hidden;
           max-width: calc(100% - 2em - 3px);
+          white-space: nowrap;
         }
 
         & .typing-status {
